# ARM

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  gen.sh  gen_log.py  log  master
config/: addr.json  mode0.json  mode1.json  mode12.json  mode2.json  mode3.json  mode4.json  mode5.json  mode6.json  mode7.json  mode8.json  mode9.json  state.json
include/: converter.h  devstate.h  httpclient.h  orderparser.h  orderpoll.h  uart.h  userpattern.h
lib/: libcurl.la  libcurl.so.4.5.0
lib/pkgconfig/: libcurl.pc
src/: converter.cpp  devstate.cpp  httpclient.cpp  main.cpp  orderparser.cpp  orderpoll.cpp  uart.cpp  uart.cpp~  userpattern.cpp
test/: TCPClient.cpp  client  pipe  pipe.cpp  server.cpp  tcpdata  test_rapidjson.cpp  uartdata
